--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2011-03-20	Peter de Ridder <peter@xfce.org>
+	* === Released 0.1.3 ===
+
 2011-02-27	Peter de Ridder <peter@xfce.org>
 
 	* tvp-git-helper/tgh-clean-dialog.c: Fixed spelling in text string.
