--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+0.1.3
+=====
+- Changed to thunarx-2 and depend upon xfce 4.8.
+- Draw a revision graph in git log.
+- Improved git ibranch action.
+
 0.1.2
 =====
 - More git actions are added: blame, clean, move and stash.
