--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 2011-03-20	Peter de Ridder <peter@xfce.org>
+
+	* === Released 0.1.4 ===
+	* thunar-vcs-plugin/tvp-provider.c: Moved scheme declaration fixing
+	  bug #7426.
 	* === Released 0.1.3 ===
 
 2011-02-27	Peter de Ridder <peter@xfce.org>
