--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2016-06-30	Landry Breuil <landry@xfce.org>
+
+	* === Released 0.1.5 ===
+	* Tons of svn improvements/fixes, courtesy of Stefan Sperling
+	* Fixed MACRO naming in makefiles. Bug #7850
+	* Fixed invalid usage of g_quark_from_static_string. Bug #6322
+
 2011-03-20	Peter de Ridder <peter@xfce.org>
 
 	* === Released 0.1.4 ===
